# agentic-project-mgmt

./: .cursorrules  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BRIGHTROUTINES.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LOOPCAPITAL.md  Makefile  ONBOARDING.md  PR_RULES.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: claude-review.yml  pr-auto-template.yml  pr-title-check.yml  sprint-release-v2.yml  sprint-release.yml
archive/: SPEC_DRIVEN_DEV_README.md  SPEC_IMPLEMENTATION_MAP.md
archive/sprint-1/: ALL_CHANGES.txt  CHANGES_SUMMARY.md  SLACK_NOTION_INTEGRATION_SETUP.md  SPRINT_1_RELEASE_NOTES.md
archive/sprint-1/jira/: ASSIGNMENTS_SUMMARY.md  ASSIGNMENT_FIX_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  DASHBOARD_SETUP.md  FINAL_SPRINT_SETUP.md  JIRA_STATUS.md  README.md  REBUILD_PLAN.md  REFACTORING_INDEX.md  REFACTORING_SUMMARY.md  SPRINT_1_ASSIGNMENTS.md  active-tickets.md  backlog.md  fetch_sprint_info.py  jedx_deactivation_task.json  milestone_1_breakdown.json  partnerships_epic.json  pyproject.toml  ready.json  recent_work_tickets.json  sprint_1_active.md  sprint_1_audit.json  sprint_1_snapshot.json  sprint_2_info.json  sprint_breakdown.json
archive/sprint-1/jira/config/: README.md
archive/sprint-1/jira/jira_cli/: cli.py
archive/sprint-1/jira/jira_lib/: README.md  __init__.py  adf_builder.py  jira_client.py
archive/sprint-1/jira/refactored/: manage_sprint.py  verify_assignments.py
archive/sprint-1/jira/scripts/: EPIC_DATES_SUMMARY.md
archive/sprint-1/jira/tests/: __init__.py  test_adf_builder.py  test_config_loader.py  test_jira_client.py  test_jira_config.py
aws-secrets-vault/: .gitignore  QUICKSTART.md  README.md
aws-secrets-vault/cli/: secrets
aws-secrets-vault/lib/: __init__.py  aws_client.py  classifier.py  config.py  dynamo_client.py  indexer.py  models.py
aws_cli/: .gitignore  pyproject.toml
aws_cli/cli/: secrets
aws_cli/tests/unit/: test_analyzer.py  test_aws_client.py  test_catalog.py  test_config.py  test_models.py
clients/: AGENTS.md  CLAUDE.md  README.md
clients/trials/longaeva/sandbox/orchestration/: .gitignore  README.md  pyproject.toml
clients/trials/longaeva/sandbox/orchestration/longaeva_dagster/: __init__.py  assets.py  definitions.py
clients/trials/loopcapital/infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
clients/trials/loopcapital/infra/loopcapital_knowledge_base/: stack.py
clients/trials/loopcapital/infra/loopcapital_sqlserver_ec2/: stack.py
config/: siblings.txt
docs/: AGENTIC_REMEDIATION_STRATEGY.md  AGENTIC_REMEDIATION_TEST_PLAN.md  AGENTS.md  CLAUDE.md  ENVIRONMENTS.md  LANGSMITH_DEPLOYMENT_SNAPSHOTS.md  RELEASE_MANIFEST.json  SLACK_NOTIFY_ENV_PARITY.md  STAGING_LEARNINGS.md  SYNAPSE_INGESTION_HANDOFF.md  WORKSPACE_USER_ROLES.md
dynamo-vault/: .gitignore  INFRASTRUCTURE.md
github-secrets/: .gitignore  README.md
jira/: AGENTS.md  CLAUDE.md  NOTION_SETUP.md  RELEASE_NOTES_AUTOMATION.md  TICKET_TEMPLATE.md  active.json  completed.json  epics.json  ready.json  sprint4_setup.sh
langsmith-vault/: README.md
lastpass-vault/: .gitignore  README.md  consolidate_all.sh  migrate.sh
notion/: DELETE_THESE_PAGES.txt  README.md  cleanup-analysis.md  pages.md
scripts/: apply-env-overlay.sh  open-terminals.sh  package_kurilead.py  render_env.py  snapshot_langsmith.sh  sprint_release.py  state.sh
shared/: accounts.py
slack/: README.md  channels.json
sprint/: AUTOMATION.md  SPEC_SPRINT_AUTOMATION.md
(+425 files in other folders)
