[project]
name = "loopcapital-demo-infra"
version = "1.0.0"
description = "Standalone CDK app: Loop Capital demo infra — SQL Server EC2 + Bedrock Knowledge Base (BH-1036)."
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.160.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]

[tool.setuptools]
packages = ["loopcapital_sqlserver_ec2", "loopcapital_knowledge_base"]
